Second commit.  Addition, subtraction, multiplication, and division working.

--- a/views/index.html
+++ b/views/index.html
@@ -22,8 +22,6 @@
         <button type="button" class="button" id="clear" name="Clear">Clear</button>
       </h3>
     </div>
-    <div id="outputDiv">
-      <h3>Output</h3>
-    </div>
+    <div id="outputDiv"></div>
   </body>
 </html>
