--- a/views/index.html
+++ b/views/index.html
@@ -15,11 +15,11 @@
         <input type="number" id="secondInput">
       </h2>
       <h3>
-        <button type="button" class="button" id="add" name="Add">+</button>
-        <button type="button" class="button" id="subtract" name="Subtract">-</button>
-        <button type="button" class="button" id="multiply" name="Multiply">*</button>
-        <button type="button" class="button" id="divide" name="Divide">/</button>
-        <button type="button" class="button" id="clear" name="Clear">Clear</button>
+        <button type="button" class="calculate" id="add" name="Add">+</button>
+        <button type="button" class="calculate" id="subtract" name="Subtract">-</button>
+        <button type="button" class="calculate" id="multiply" name="Multiply">*</button>
+        <button type="button" class="calculate" id="divide" name="Divide">/</button>
+        <button type="button" class="clear" id="clear" name="Clear">Clear</button>
       </h3>
     </div>
     <div id="outputDiv"></div>
